--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,9 +1,9 @@
 spring:
   config:
     activate:
-      on-profile: dev
+      on-profile: prod
 
-  datasource:
+    datasource:
     # MySQL
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/coretime_db?&serverTimezone=Asia/Seoul
@@ -13,7 +13,5 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     open-in-view: false
-    show-sql: true
     hibernate:
-      ddl-auto: update
-      format-sql: true
+      ddl-auto: none
