--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,6 +3,12 @@ spring:
     activate:
       on-profile: dev
 
+  # Redis
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
   datasource:
     # MySQL
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -17,3 +23,8 @@ spring:
     hibernate:
       ddl-auto: update
       format-sql: true
+
+jwt:
+  secret: vms7026your-very-long-and-secure-random-secret-key-for-jwt # 32자 이상 권장
+  access-expiration: 3600000 # 1시간
+  refresh-expiration: 1209600000 # 14일
